src/rust/items/snapshots/syn_state_machine__rust__items__use_declarations__tests__concat_idents! (parse it_matches_complex_path).snap
---
source: src/rust/items/use_declarations.rs
expression: "crate::parse::<UseDeclaration>(q.clone())"
---
Ok(
    UseDeclaration {
        tree: Branch(
            None,
            Interlace {
                values: [
                    Star(
                        Some(
                            HigherOrderPath {
                                leading: false,
                                segments: Interlace {
                                    values: [
                                        Identifier(
                                            Identifier(
                                                Ident(
                                                    hello,
                                                ),
                                            ),
                                        ),
                                    ],
                                },
                            },
                        ),
                    ),
                    Simple(
                        HigherOrderPath {
                            leading: false,
                            segments: Interlace {
                                values: [
                                    Identifier(
                                        Identifier(
                                            Ident(
                                                world,
                                            ),
                                        ),
                                    ),
                                    Identifier(
                                        Identifier(
                                            Ident(
                                                hi,
                                            ),
                                        ),
                                    ),
                                ],
                            },
                        },
                        Some(
                            IdentifierOrUnder(
                                Ident(
                                    Hi,
                                ),
                            ),
                        ),
                    ),
                    Branch(
                        Some(
                            HigherOrderPath {
                                leading: false,
                                segments: Interlace {
                                    values: [
                                        Identifier(
                                            Identifier(
                                                Ident(
                                                    nested,
                                                ),
                                            ),
                                        ),
                                    ],
                                },
                            },
                        ),
                        Interlace {
                            values: [
                                Simple(
                                    HigherOrderPath {
                                        leading: false,
                                        segments: Interlace {
                                            values: [
                                                Identifier(
                                                    Identifier(
                                                        Ident(
                                                            hello,
                                                        ),
                                                    ),
                                                ),
                                                Identifier(
                                                    Identifier(
                                                        Ident(
                                                            world,
                                                        ),
                                                    ),
                                                ),
                                            ],
                                        },
                                    },
                                    None,
                                ),
                                Simple(
                                    HigherOrderPath {
                                        leading: false,
                                        segments: Interlace {
                                            values: [
                                                Identifier(
                                                    Identifier(
                                                        Ident(
                                                            hi,
                                                        ),
                                                    ),
                                                ),
                                            ],
                                        },
                                    },
                                    None,
                                ),
                            ],
                        },
                    ),
                ],
            },
        ),
    },
)
