src/rust/items/snapshots/syn_state_machine__rust__items__use_declarations__tests__concat_idents! (parse it_matches_simple_path_as).snap
---
source: src/rust/items/use_declarations.rs
expression: "crate::parse::<UseDeclaration>(q.clone())"
---
Ok(
    UseDeclaration {
        tree: Simple(
            HigherOrderPath {
                leading: false,
                segments: Interlace {
                    values: [
                        Identifier(
                            Identifier(
                                Ident(
                                    hello,
                                ),
                            ),
                        ),
                        Identifier(
                            Identifier(
                                Ident(
                                    world,
                                ),
                            ),
                        ),
                    ],
                },
            },
            Some(
                IdentifierOrUnder(
                    Ident(
                        h,
                    ),
                ),
            ),
        ),
    },
)
