src/rust/items/snapshots/syn_state_machine__rust__items__use_declarations__tests__concat_idents! (parse it_matches_star_path).snap
---
source: src/rust/items/use_declarations.rs
expression: "crate::parse::<UseDeclaration>(q.clone())"
---
Ok(
    UseDeclaration {
        tree: Star(
            Some(
                HigherOrderPath {
                    leading: false,
                    segments: Interlace {
                        values: [
                            Identifier(
                                Identifier(
                                    Ident(
                                        hello,
                                    ),
                                ),
                            ),
                        ],
                    },
                },
            ),
        ),
    },
)
