src/rust/items/snapshots/syn_state_machine__rust__items__use_declarations__tests__it_matches_simple_path.snap
---
source: src/rust/items/use_declarations.rs
expression: "insta_match_test!(+ parse UseDeclaration : use hello :: world ;)"
---
Ok(
    UseDeclaration {
        tree: Simple(
            HigherOrderPath {
                leading: false,
                segments: MinLength(
                    Interlace {
                        values: [
                            Identifier(
                                Identifier(
                                    Ident(
                                        hello,
                                    ),
                                ),
                            ),
                            Identifier(
                                Identifier(
                                    Ident(
                                        world,
                                    ),
                                ),
                            ),
                        ],
                    },
                ),
            },
            None,
        ),
    },
)
