src/rust/items/snapshots/syn_state_machine__rust__items__use_declarations__tests__it_matches_star_path.snap
---
source: src/rust/items/use_declarations.rs
expression: "insta_match_test!(+ parse UseDeclaration : use hello :: * ;)"
---
Ok(
    UseDeclaration {
        tree: Star(
            Some(
                Some(
                    HigherOrderPath {
                        leading: false,
                        segments: Interlace {
                            values: [
                                Identifier(
                                    Identifier(
                                        Ident(
                                            hello,
                                        ),
                                    ),
                                ),
                            ],
                        },
                    },
                ),
            ),
        ),
    },
)
